 - the old semantic of __initcmd is gone.


incompatible change:
====== 
Class O -parameter {
  {a -default 0}
  {b -default {[cmd 3 4]}} c d 
  {e -default 3} 
  {Self -default [self]}
}
Class Meta -superclass Class
Meta C -superclass O -parameter {a {b -default ""} {c -default 1}}
C c1 ;# c1 has no no default value for "a", before it had
======

2009-06-25 <Gustaf.Neumann@wu-wien.ac.at>
    - new command:

        ::xotcl::createobjectsystem <rootClass> <rootMetaClass>

      This command creates a basic object system with the specified
      <rootClass> as most general root class and the specified
      metaclass as most general meta class.

      Example:  
        ::xotcl::createobjectsystem ::oo::object ::oo::class

      In general, it would be possible to remove an objects system at
      runtime, but there is so far no tcl interface for this.

    - extended framework to work with multiple root classes

    - the basic root class of XOTcl is now ::xotcl::Object again
      (instead of ::oo::object) as before. The old setup can be
      achieved on the Tcl-layer.

2009-06-22 <Gustaf.Neumann@wu-wien.ac.at>
    - define default meta-class for ::xotcl::Class
    - use default meta-class, when a the topmost meta-class of an
      object system is deleted
    - extend regression test

2009-06-14 <Gustaf.Neumann@wu-wien.ac.at>
    - fixed potential access to deleted command list item in
      FilterSearchAgain()
    - fixed potential access deleted xotcl object by switching order
      in a condition
    - some minor cleanup for configuration flags

2009-03-19 <Gustaf.Neumann@wu-wien.ac.at>
    * Release of XOTcl 1.6.3

2009-03-19 <Gustaf.Neumann@wu-wien.ac.at>
    - removed references to 1.6.2

2009-03-04 <Gustaf.Neumann@wu-wien.ac.at>
    - re-enable small optimization
    - factor out common code
    - fix compatibility with Tcl 8.4
    - bump version number to 1.6.3

2009-03-03 <Gustaf.Neumann@wu-wien.ac.at>